--- a/week_1_basics_n_setup/2_docker_sql/upload-data.ipynb
+++ b/week_1_basics_n_setup/2_docker_sql/upload-data.ipynb
@@ -669,7 +669,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -683,7 +683,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7 (default, Sep 16 2021, 13:09:58) \n[GCC 7.5.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0657f11f2ece056a5d477848bcc62df124ce81afad7579d39778fa4e64b0b11c"
+   }
   }
  },
  "nbformat": 4,
